tools/exomizer: add vendored copy of exomizer

--- a/picopack/part/CMakeLists.txt
+++ b/picopack/part/CMakeLists.txt
@@ -6,14 +6,18 @@ function(picopack_add_part_library target part-target part-num)
     set(packed_src ${CMAKE_CURRENT_BINARY_DIR}/${part-target}_packed.S)
 
     add_custom_target(${part-target}_bin DEPENDS ${original_bin})
-    add_custom_command(OUTPUT ${original_bin} DEPENDS ${part-target} COMMAND ${CMAKE_OBJCOPY} -Obinary $<TARGET_FILE:${part-target}> ${original_bin})
+    add_custom_command(OUTPUT ${original_bin} DEPENDS ${part-target} COMMAND
+        "${CMAKE_OBJCOPY}" -Obinary $<TARGET_FILE:${part-target}> ${original_bin}
+    )
 
     find_package(Python3 REQUIRED COMPONENTS Interpreter)
 
     add_custom_target(${part-target}_packed_bin DEPENDS ${packed_bin})
     add_custom_command(OUTPUT ${packed_bin} DEPENDS ${original_bin}
-        COMMAND ${Python3_EXECUTABLE} "${PICOPACK_PART_DIR}/part_$<TARGET_PROPERTY:${target},PICOPACK_TARGET_BOOT2>.py" ${original_bin} ${packed_bin}
+        COMMAND ${CMAKE_COMMAND} -E env "EXORAW=$ENV{EXORAW}" "${Python3_EXECUTABLE}"
+        "${PICOPACK_PART_DIR}/part_$<TARGET_PROPERTY:${target},PICOPACK_TARGET_BOOT2>.py" ${original_bin} ${packed_bin}
     )
+    add_dependencies(${part-target}_packed_bin exomizer)
 
     add_custom_target(${part-target}_packed_src DEPENDS ${packed_src})
     add_custom_command(OUTPUT ${packed_src} DEPENDS ${packed_bin}
