--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ include(cmake/fix_clangd_includes.cmake)
 set(CMAKE_CXX_STANDARD 20)
 add_cxx_compile_options(-Wno-volatile -Wno-deprecated-volatile) # silence C++20 warnings in SDK
 
+add_subdirectory(tools)
 add_subdirectory(picopack)
 add_subdirectory(usdk)
 add_subdirectory(embed)
