tools/upkr: add vendored copy of upkr

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pico-sdk"]
 	path = pico-sdk
 	url = https://github.com/raspberrypi/pico-sdk
+[submodule "tools/upkr"]
+	path = tools/upkr
+	url = https://github.com/exoticorn/upkr
